name:           capnproto-compiler
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         kenton

executable capnproto-compiler
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   parsec,
                   mtl,
                   containers,
                   file-embed,
                   bytestring,
                   Crypto,
                   utf8-string,
                   hastache,
                   array,
                   data-binary-ieee754,
                   filepath
  -- When profiling is needed, add: -prof -fprof-auto -osuf p_o -hisuf p_hi
  ghc-options:     -Wall -fno-warn-missing-signatures
  other-modules:
                   Lexer,
                   Token,
                   Grammar,
                   Parser,
                   Compiler,
                   Semantics,
                   Util,
                   CxxGenerator,
                   WireFormat

